# EchoHub

./: .editorconfig  .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  next.config.mjs  package.json  pnpm-lock.yaml
backend/src/: main.rs
backend/src/common/: mod.rs  types.rs  util.rs
backend/src/common/entities/: users.rs
web/: tsconfig.json
web/app/: layout.tsx
web/components/: RecoilProvider.tsx
web/styles/: globals.scss
